# asr_Server

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
asr_server/: config.py  errors.py  execution.py  jobs.py  lifecycle.py  main.py  registry.py  transcription.py
deploy/: asr-server.service  windows-start-asr.ps1  wsl-deploy.sh
docs/: README.md  asr-server-prd.md  docs-endpoint-capabilities.md  moss-long-form-podcast-optimization-handoff.md  moss-transcribe-diarize-wsl-deployment-plan.md  qwen-hf-native-migration-plan.md  review-2026-07-10-stability-refactor.md  validation-2026-06-29-wsl.md  validation-2026-07-02-wsl-hf-native.md  validation-2026-07-10-wsl-moss.md  validation-2026-07-15-live-chunks-four-speaker-podcast.md  validation-2026-07-15-wsl-moss-anchor-replay.md  validation-2026-07-15-wsl-moss-long-form.md  validation-template.md  wsl-deployment.md  wsl-next-plan.md
prompts/: request-client-agent.md  server-agent.md  wsl-project-brief.md
requirements/: wsl-gpu-cu128.txt
scripts/: asr_client.py  batch_transcribe_qwen.py  export_transcript_artifacts.py  moss_backend_smoke.py  qwen_asr_backend_smoke.py  shutdown_asr_server.sh  start_asr_server.sh  wsl_smoke.sh
tests/: test_anchor_replay.py  test_api.py  test_asr_client.py  test_audio_preprocess.py  test_audio_splitter.py  test_config.py  test_dependency_pins.py  test_execution_policy.py  test_http_smoke.py  test_jobs.py  test_lifecycle.py  test_moss_adapter.py  test_qwen_adapter.py  test_transcript_export.py  test_worker_transport.py  test_workspace.py
(+18 files in other folders)
